#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

HP-2011-03-30-0: Bugfix:     issue_1760 test used "tail +2" which isn't
                             available on all Linux versions
                             -> changed to "tail -n +2", which seems to work
                             everywhere
                 Issue:      No issue for this minor bug

DG-2011-03-30-0: Cleanup:    added -jmx as default parameter, because
                             otherwise a JMX installation would not be
                             possible anymore (this has to be changed later)

JG-2011-03-29-0: Bugfix:     checktree_arco:
                             - removed reporting (Web Console) specific code
                             - fixed build, install and tests except for the
                               junit test
                 Issue:      TS-362

DG-2011-03-29-0: Cleanup:    Changed amount of expected entries during install
                 Review:     EB 

HP-2011-03-28-0: Enhancem.:  Added test that checks if DOS and UNIX line
                             breaks are preserved in qrsh -pty yes output
                 Issue:      GE-3382 TS-353
                 Review:     EB

DG-2011-03-27-0: Cleanup:    Fixed test 1803.
                 Review:     EB

DG-2011-03-25-0: Cleanup:    Fixed core binding test.
                 Review:     HP

EB-2011-03-23-0: Cleanup:    Removed authuser test and hedeby checktree
                 Issue:      GE-3345 TS-343

DG-2010-03-22-0: Bugfix:     Adapted testsuite installer to work with enabled
                             core binding on Linux execd.
                 Review:     TBD
